--- a/clase-10/src/views/templates/home.handlebars
+++ b/clase-10/src/views/templates/home.handlebars
@@ -1,1 +1,15 @@
-<h1>Hola coders!</h1>
+<h1>Productos</h1>
+
+{{#if mostrarProductos}}
+{{#each productos}}
+<div>
+    <p>Titulo: {{this.title}}</p>
+    <p>Descripcion: {{this.description}}</p>
+    <p>Precio: {{this.price}}</p>
+    <p>Stock: {{this.stock}}</p>
+    <img src="{{this.img}}" alt="Imagen de {{this.title}}">
+</div>
+{{/each}}
+{{else}}
+<p>No se pueden mostrar los productos</p>
+{{/if}}
